--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,4 +23,5 @@ exportClasses(segReads, segReadsList, pics, picsError, picsList)
 exportMethods(show, summary, plot, density, chromosome, score, se, seF, seR, sigmaSqF, sigmaSqR, mu, delta, w, code, length, K,"[","[[")
 
 # I export the default parameters for the PICS code, so that the user does not have to worry about them
-export(paraPriorH,paraPriorTF,paraEMH,paraEMTF)
+# export(paraPriorH,paraPriorTF,paraEMH,paraEMTF)
+export(paraPriorTF,paraEMTF)
