--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,14 @@
 useDynLib(PICS)
 
-importMethodsFrom(IRanges, "score", "sort", "unique", "order", "duplicated","start","end","lapply")
-
 import(methods)
-importFrom(graphics, abline, axis, grid, layout, lines, mtext, par, plot, points, segments, stripchart, symbols, title)
+importFrom(graphics, abline, axis, grid, layout, lines, mtext, par,
+           plot, points, segments, stripchart, symbols, title)
 importFrom(grDevices, grey)
-importFrom(stats, density, dt, integrate, kmeans, pt)
+importFrom(stats, density, dt)
 
 importFrom(IRanges, IRanges, RangedData)
 importClassesFrom(IRanges, IRanges, RangedData)
-importMethodsFrom(IRanges,space)
+importMethodsFrom(IRanges, space, score, sort, unique, order, duplicated, start, end, lapply)
 
 importMethodsFrom(GenomicRanges, strand)
 
@@ -20,7 +19,8 @@ importClassesFrom(BSgenome, GenomeData)
 exportPattern(".+")
 
 exportClasses(segReads, segReadsList, pics, picsError, picsList)
-exportMethods(show, summary, plot, density, chromosome, score, se, seF, seR, sigmaSqF, sigmaSqR, mu, delta, w, code, length, K,"[","[[")
+exportMethods(show, summary, plot, density, chromosome, score, se, seF, seR,
+              sigmaSqF, sigmaSqR, mu, delta, w, code, length, K,"[","[[")
 
 # I export the default parameters for the PICS code, so that the user does not have to worry about them
 # export(paraPriorH,paraPriorTF,paraEMH,paraEMTF)
