--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 1.0.4
+Version: 1.0.5
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
 Maintainer: Arnaud Droit <arnaud.droit@ircm.qc.ca>, Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
 Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome, chipseq
 Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
-biocViews: Clustering, Statistics, Visualization, Sequencing
+biocViews: Clustering, Statistics, Visualization, Sequencing, ChIPseq
 License: Artistic-2.0
