--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 1.2.10
+Version: 1.2.11
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
 Maintainer: Arnaud Droit <arnaud.droit@ircm.qc.ca>, Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
-Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome, chipseq
+Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome
 Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
 Enhances: multicore
