removed invalid biocViews terms
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@50725 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
 Enhances: multicore
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
-biocViews: Clustering, Statistics, Visualization, Sequencing, ChIPseq
+biocViews: Clustering, Visualization, Sequencing, ChIPseq
 License: Artistic-2.0
