--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
 Version: 1.7.0
-Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
-Maintainer: Arnaud Droit <arnaud.droit@ircm.qc.ca>, Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <raph@stat.ubc.ca>
+Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
+Maintainer: Arnaud Droit <arnaud.droit@crchuq.ulaval.ca>, Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
 Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome
 Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
