--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Probabilistic inference of ChIP-seq
 Version: 1.7.0
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
-Maintainer: Arnaud Droit <arnaud.droit@crchuq.ulaval.ca>, Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
+Maintainer: Arnaud Droit <arnaud.droit@crchuq.ulaval.ca>
 Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome
 Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
