--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 1.9.0
+Version: 1.9.1
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
 Maintainer: Arnaud Droit <arnaud.droit@crchuq.ulaval.ca>
-Depends: R(>= 2.11.0), IRanges, GenomicRanges, BSgenome
-Imports: IRanges, GenomicRanges, BSgenome, methods, graphics, grDevices, stats
+Depends: R (>= 2.11.0), BiocGenerics (>= 0.1.0), IRanges (>= 1.13.5), GenomicRanges, BSgenome
+Imports: methods, BiocGenerics, IRanges, GenomicRanges, BSgenome, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
 Enhances: multicore
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
