Better to import the full BiocGenerics package instead of trying to do selective imports.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@60933 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ importFrom(graphics, abline, axis, grid, layout, lines, mtext, par,
 importFrom(grDevices, grey)
 importFrom(stats, density, dt)
 
-importFrom(BiocGenerics, order)
+import(BiocGenerics)
 
 importFrom(IRanges, IRanges, RangedData)
 importClassesFrom(IRanges, IRanges, RangedData)
