imports density and plot generics from stats4
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@63587 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ import(methods)
 importFrom(graphics, abline, axis, grid, layout, lines, mtext, par,
            plot, points, segments, stripchart, symbols, title)
 importFrom(grDevices, grey)
-importFrom(stats, density, dt)
-
+importFrom(stats, dt)
+importFrom(stats4, density, plot)
 import(BiocGenerics)
 
 importFrom(IRanges, IRanges, RangedData)
