--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.9.1
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
 Maintainer: Arnaud Droit <arnaud.droit@crchuq.ulaval.ca>
 Depends: R (>= 2.11.0), BiocGenerics (>= 0.1.3), IRanges (>= 1.13.10), GenomicRanges, BSgenome
-Imports: methods, BiocGenerics, IRanges, GenomicRanges, BSgenome, graphics, grDevices, stats
+Imports: methods, BiocGenerics, stats4, IRanges, GenomicRanges, BSgenome, graphics, grDevices, stats
 Suggests: snowfall, ShortRead, rtracklayer
 Enhances: multicore
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
