--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,9 @@ importFrom(graphics, abline, axis, grid, layout, lines, mtext, par,
            plot, points, segments, stripchart, symbols, title)
 importFrom(grDevices, grey)
 importFrom(stats, dt)
-importFrom(stats4, density, plot)
+importFrom(stats4, plot)
 import(BiocGenerics)
+importFrom(BiocGenerics, density)
 
 importFrom(IRanges, IRanges, RangedData)
 importClassesFrom(IRanges, IRanges, RangedData)
