added import of summary generic from stats4
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@63688 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ importFrom(graphics, abline, axis, grid, layout, lines, mtext, par,
 importFrom(grDevices, grey)
 importFrom(stats, dt)
 importFrom(stats4, plot)
+importFrom(stats4, summary)
 import(BiocGenerics)
 importFrom(BiocGenerics, density)
 
