--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ importFrom(BiocGenerics, density)
 
 importFrom(IRanges, IRanges, RangedData)
 importClassesFrom(IRanges, IRanges, RangedData)
-importMethodsFrom(IRanges, space, score, sort, unique, order, duplicated, start, end, lapply, levels, as.factor)
+importMethodsFrom(IRanges, space, score, sort, order, duplicated, start, end, lapply, levels, as.factor)
 
 importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand)
@@ -25,11 +25,11 @@ importClassesFrom(BSgenome, GenomeData)
 exportClasses(segReads, segReadsList, pics, picsError, picsList)
 exportMethods(coerce, show, summary, plot, density, chromosome, score, se, seF, seR,
 	sigmaSqF, sigmaSqR, mu, delta, w, code, length, K,"[","[[",
-	map, minRange, maxRange, scoreForward, scoreReverse, unique)
-export("segReadsList", "segReadsGeneric", "segReads", "segmentPICS", "summarySeg", "makeRangedDataOutput", "PICS", "picsFDR","backgroundSim")
+	map, minRange, maxRange, scoreForward, scoreReverse)
+export("segReadsList", "segReadsGeneric", "segReads", "segmentPICS", "summarySeg", "makeRangedDataOutput", "PICS", "picsFDR", "newPicsError", "setParaEM", "setParaPrior")
 
 ### export anything w/out a dot in front. 
 #exportPattern(".+")
 # I export the default parameters for the PICS code, so that the user does not have to worry about them
 # export(paraPriorH,paraPriorTF,paraEMH,paraEMTF)
-export(paraPriorTF, paraEMTF)
+#export(paraPriorTF, paraEMTF)
