--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,6 @@
+#
+# NAMESPACE
+#
 useDynLib(PICS)
 
 import(methods)
@@ -7,7 +10,7 @@ importFrom(grDevices, grey)
 importFrom(stats, dt)
 importFrom(stats4, plot)
 importFrom(stats4, summary)
-import(BiocGenerics)
+#import(BiocGenerics)
 importFrom(BiocGenerics, density)
 
 importFrom(IRanges, IRanges, RangedData, coverage)
@@ -18,12 +21,12 @@ importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand)
 importFrom(GenomicRanges, GRanges)
 
-importFrom(BSgenome, GenomeData)
-importClassesFrom(BSgenome, GenomeData)
+#importFrom(BSgenome, GenomeData)
+#importClassesFrom(BSgenome, GenomeData)
 
 
 exportClasses(segReads, segReadsList, segReadsPE, segReadsListPE, pics, picsError, picsList)
-exportMethods(coerce, show, summary, plot, density, chromosome, score, se, seF, seR,
+exportMethods(coerce, show, summary, plot, wigDensity, chromosome, score, se, seF, seR,
 	sigmaSqF, sigmaSqR, mu, delta, w, code, length, K,"[","[[",
 	map, minRange, maxRange, scoreForward, scoreReverse)
 export("segReadsList", "segReadsListPE", "segReadsPE", "segReadsGeneric", "segReads", "segmentPICS", "summarySeg", "makeRangedDataOutput", "PICS", "picsFDR", "newPicsError", "setParaEM", "setParaPrior",
