--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,8 @@ Title: Probabilistic inference of ChIP-seq
 Version: 1.11.0
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
 Maintainer: Renan Sauteraud <rsautera@fhcrc.org>
-Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3), IRanges (>= 1.13.10),
-        GenomicRanges
-Imports: methods, BiocGenerics, stats4, IRanges, GenomicRanges,
+Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3), IRanges, GenomicRanges, BSgenome
+Imports: methods, BiocGenerics, stats4, IRanges, GenomicRanges, BSgenome,
          graphics, grDevices, stats
 Suggests: ShortRead, rtracklayer, parallel
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
