--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,11 @@ importFrom(BiocGenerics, density)
 
 importFrom(IRanges, IRanges, RangedData, coverage)
 importClassesFrom(IRanges, IRanges, RangedData)
-importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix)
+importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix, resize)
 
-importClassesFrom(GenomicRanges, GRanges)
-importMethodsFrom(GenomicRanges, strand)
-importFrom(GenomicRanges, GRanges)
+#importClassesFrom(GenomicRanges, GRanges)
+#importMethodsFrom(GenomicRanges, strand, seqnames)
+#importFrom(GenomicRanges, GRanges)
 
 #importFrom(BSgenome, GenomeData)
 #importClassesFrom(BSgenome, GenomeData)
