--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(IRanges, IRanges, RangedData, coverage)
 importClassesFrom(IRanges, IRanges, RangedData)
 importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix, resize)
 
+importFrom(Rsamtools, ScanBamParam, scanBamFlag, readBamGappedAlignments)
+
 importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand, seqnames)
 importFrom(GenomicRanges, GRanges)
