--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,9 @@ importFrom(BiocGenerics, density)
 
 importFrom(IRanges, IRanges, RangedData, coverage)
 importClassesFrom(IRanges, IRanges, RangedData)
-importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix, resize)
+importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix, resize, elementMetadata, "elementMetadata<-")
 
-importFrom(Rsamtools, ScanBamParam, scanBamFlag, readBamGappedAlignments)
+importFrom(Rsamtools, ScanBamParam, scanBamFlag, readGAlignmentsFromBam)
 
 importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand, seqnames)
