--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,13 @@ importFrom(IRanges, IRanges, RangedData, coverage)
 importClassesFrom(IRanges, IRanges, RangedData)
 importMethodsFrom(IRanges, space, score, slice, sort, order, duplicated, start, end, lapply, levels, as.factor, as.matrix, resize, elementMetadata, "elementMetadata<-")
 
-importFrom(Rsamtools, ScanBamParam, scanBamFlag, readGAlignmentsFromBam)
+importFrom(Rsamtools, ScanBamParam, scanBamFlag)
 
 importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand, seqnames)
 importFrom(GenomicRanges, GRanges)
+
+importFrom(GenomicAlignments, readGAlignmentsFromBam)
 
 #importFrom(BSgenome, GenomeData)
 #importClassesFrom(BSgenome, GenomeData)
