--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 2.7.2
-Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
+Version: 2.7.3
+Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo
+        <rgottard@fhcrc.org>
 Maintainer: Renan Sauteraud <rsautera@fhcrc.org>
 Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3)
-Imports: methods, stats4, IRanges, GenomicRanges,
-         graphics, grDevices, stats, Rsamtools, GenomicAlignments
+Imports: methods, stats4, IRanges, GenomicRanges, graphics, grDevices,
+        stats, Rsamtools, GenomicAlignments
 Suggests: ShortRead, rtracklayer, parallel
-Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
-biocViews: Clustering, Visualization, Sequencing, ChIPseq
+Description: Probabilistic inference of ChIP-Seq using an empirical
+        Bayes mixture model approach.
 License: Artistic-2.0
 Packaged: 2012-03-31 07:09:18 UTC; biocbuild
+biocViews: Clustering, Visualization, Sequencing, ChIPSeq
