--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 2.11.0
+Version: 2.11.1
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo
         <rgottard@fhcrc.org>
 Maintainer: Renan Sauteraud <rsautera@fhcrc.org>
 Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3)
 Imports: methods, stats4, IRanges, GenomicRanges, graphics, grDevices,
-        stats, Rsamtools, GenomicAlignments
+        stats, Rsamtools, GenomicAlignments, S4Vectors
 Suggests: ShortRead, rtracklayer, parallel
 Description: Probabilistic inference of ChIP-Seq using an empirical
         Bayes mixture model approach.
