use readGAlignment*() instead of deprecated readGAlignment*FromBam() functions
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/PICS@100235 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ importClassesFrom(GenomicRanges, GRanges)
 importMethodsFrom(GenomicRanges, strand, seqnames)
 importFrom(GenomicRanges, GRanges)
 
-importFrom(GenomicAlignments, readGAlignmentsFromBam)
+importFrom(GenomicAlignments, readGAlignments)
 
 #importFrom(BSgenome, GenomeData)
 #importClassesFrom(BSgenome, GenomeData)
