--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3)
 Imports: methods, stats4, IRanges, GenomicRanges, graphics, grDevices,
         stats, Rsamtools, GenomicAlignments, S4Vectors
 Suggests: ShortRead, rtracklayer, parallel
+SystemRequirements: GSL (GNU Scientific Library)
 Description: Probabilistic inference of ChIP-Seq using an empirical
         Bayes mixture model approach.
 License: Artistic-2.0
