--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 2.3.05
+Version: 2.3.06
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
-Maintainer: Renan Sauteraud <rsautera@fhcrc.org>
+Maintainer: Renan Sauteraud <renan.sauteraud@gmail.com>
 Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3)
 Imports: methods, stats4, IRanges, GenomicRanges,
          graphics, grDevices, stats, Rsamtools
