--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,27 @@
 Package: PICS
 Type: Package
 Title: Probabilistic inference of ChIP-seq
-Version: 2.3.06
+Version: 2.4.0
 Author: Xuekui Zhang <xzhang@stat.ubc.ca>, Raphael Gottardo <rgottard@fhcrc.org>
 Maintainer: Renan Sauteraud <renan.sauteraud@gmail.com>
-Depends: R (>= 2.14.0), BiocGenerics (>= 0.1.3)
-Imports: methods, stats4, IRanges, GenomicRanges,
-         graphics, grDevices, stats, Rsamtools
-Suggests: ShortRead, rtracklayer, parallel
+Depends: R (>= 3.0.0)
+Imports: 
+  methods,
+  stats4,
+  IRanges,
+  GenomicRanges,
+  Rsamtools,
+  GenomicAlignments
+Suggests: 
+  rtracklayer, 
+  parallel,
+  knitr
 Description: Probabilistic inference of ChIP-Seq using an empirical Bayes mixture model approach. 
 biocViews: Clustering, Visualization, Sequencing, ChIPseq
+VignetteBuilder: knitr
+URL: https://github.com/SRenan/PICS
+BugReports: https://github.com/SRenan/PICS/issues
 License: Artistic-2.0
 Packaged: 2012-03-31 07:09:18 UTC; biocbuild
+Encoding: UTF-8
+RoxygenNote: 6.1.1
