--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(newPics)
 export(newPicsError)
 export(newPicsList)
 export(picsFDR)
+export(score)
 export(scoreForward)
 export(scoreReverse)
 export(se)
@@ -59,7 +60,6 @@ importFrom(GenomicRanges,strand)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,coverage)
 importFrom(IRanges,end)
-importFrom(IRanges,score)
 importFrom(IRanges,slice)
 importFrom(IRanges,start)
 importFrom(IRanges,viewMaxs)
