--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(chromosome)
 export(code)
 export(delta)
 export(makeGRangesOutput)
-export(map)
 export(maxRange)
 export(minRange)
 export(mu)
@@ -45,23 +44,48 @@ exportClasses(segReadsListPE)
 exportClasses(segReadsPE)
 exportMethods("[")
 exportMethods("[[")
+exportMethods(map)
 exportMethods(plot)
 exportMethods(score)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(wigDensity)
+import(methods)
 importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(IRanges,IRanges)
 importFrom(GenomicAlignments,readGAlignments)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,elementMetadata)
+importFrom(GenomicRanges,findOverlaps)
 importFrom(GenomicRanges,seqnames)
 importFrom(GenomicRanges,strand)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,coverage)
+importFrom(IRanges,disjoin)
 importFrom(IRanges,end)
 importFrom(IRanges,slice)
 importFrom(IRanges,start)
 importFrom(IRanges,viewMaxs)
+importFrom(IRanges,viewMins)
+importFrom(IRanges,width)
 importFrom(Rsamtools,ScanBamParam)
+importFrom(Rsamtools,scanBamFlag)
+importFrom(grDevices,grey)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,grid)
+importFrom(graphics,layout)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,segments)
+importFrom(graphics,stripchart)
+importFrom(graphics,symbols)
+importFrom(graphics,title)
+importFrom(stats,density)
+importFrom(stats,dt)
+importFrom(stats,reshape)
+importFrom(utils,tail)
 useDynLib(PICS, .registration = TRUE)
