Fix all warnings
Document all methods
Improve NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,6 @@ export(makeGRangesOutput)
 export(maxRange)
 export(minRange)
 export(mu)
-export(newPics)
-export(newPicsError)
-export(newPicsList)
 export(picsFDR)
 export(score)
 export(scoreForward)
@@ -34,7 +31,6 @@ export(sigmaSqF)
 export(sigmaSqR)
 export(summarySeg)
 export(w)
-export(wigDensity)
 exportClasses(pics)
 exportClasses(picsError)
 exportClasses(picsList)
@@ -46,14 +42,15 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods(map)
 exportMethods(plot)
-exportMethods(score)
 exportMethods(show)
 exportMethods(summary)
-exportMethods(wigDensity)
 import(methods)
 importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(IRanges,IRanges)
 importFrom(GenomicAlignments,readGAlignments)
+importFrom(GenomicRanges,"elementMetadata<-")
+importFrom(GenomicRanges,"end<-")
+importFrom(GenomicRanges,"start<-")
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,elementMetadata)
 importFrom(GenomicRanges,findOverlaps)
